# litchron

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
.omc/specs/: deep-interview-litchron-scivcd-interop.md
docs/: architecture.md  citation-verification.md  desktop-cleanup-advisory.md  llm-schema.md  mcp-tool-reference.md
litchron/: _runtime.py  citations.py  compare.py  config.py  embeddings.py  figures.py  io.py  llm_alignment.py  llm_pseudotime.py  observations.py  preflight.py  report.py  sanitize.py  state.py
litchron/baselines/: __init__.py  _r_runner.py  monocle3.py  paga.py  palantir.py  pyslingshot.py  scvelo.py  slingshot_r.py
mcp_litchron/: cache.py  errors.py  server.py  tools.py
plugin/: .mcp.json  README.md
plugin/.claude-plugin/: plugin.json
scripts/: audit_figures.py
studies/: citation_threshold_calibration.py  pseudotime_direction.py
tests/: conftest.py
tests/e2e/: test_live_llm.py
tests/fixtures/: synthetic.py
tests/integration/: test_baseline_isolation.py  test_concurrent_state.py  test_latex_adversarial.py  test_resume.py  test_smoke_synthetic.py
tests/unit/: test_bibtex_collisions.py  test_citations_mocked.py  test_compare.py  test_compare_direction.py  test_embeddings_determinism.py  test_llm_pseudotime.py  test_no_rpy2_in_parent.py  test_preflight.py  test_runtime_ids.py  test_sanitize.py  test_scaffold.py  test_search_tools_mocked.py  test_server_dispatch.py  test_start_run.py  test_state.py  test_status_schema.py  (+1 more)
tex/: litchron.tex
(+7 files in other folders)
